# arpeggiator

./: .gitmodules  CMakeLists.txt  arpeggiator.ino  engine.cpp  engine.h  sdkconfig
components/arduino_midi_library/: CMakeLists.txt
components/arduino_midi_library/builder/: CMakeLists.txt
components/arduino_midi_library/src/: CMakeLists.txt  MIDI.h  MIDI.hpp  midi_Defs.h
components/arduino_midi_library/test/mocks/: CMakeLists.txt
components/arduino_midi_library/test/unit-tests/: CMakeLists.txt
components/encoder/: CMakeLists.txt  ClickEncoder.cpp  ClickEncoder.hpp
main/: CMakeLists.txt  Sequencor.cpp  Sequencor.h  acommon.h  arpEngine.cpp  arpEngine.h  arpTask.cpp  arpTask.h  displayController.cpp  displayController.h  inputTask.cpp  inputTask.h  main.cpp  menuController.cpp  menuController.h  rotaryEnc.cpp  rotaryEnc.h  tempoTimer.cpp  tempoTimer.h
